--- a/platformio.ini
+++ b/platformio.ini
@@ -3,6 +3,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 upload_port = /dev/ttyUSB0
+test_port = /dev/ttyUSB0
 monitor_speed = 115200
 
 	
