--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,6 @@
+[platformio]
+envs_dir = /var/lib/jenkins/workspace/pio_declarative
+
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
