--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,8 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-upload_port = /dev/tty
-test_port = /dev/tty
+upload_port = /dev/ttyUSB0
+test_port = /dev/ttyUSB0
 monitor_speed = 115200
 
 	
