--- a/platformio.ini
+++ b/platformio.ini
@@ -2,6 +2,8 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+check_tool = cppcheck
+check_flags = --enable=all
 upload_port = /dev/ttyUSB0
 test_port = /dev/ttyUSB0
 monitor_speed = 115200
